# bittle

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  weekly.yml
examples/: array.rs
src/: array.rs  bits.rs  bits_mut.rs  bits_owned.rs  endian.rs  fixed_set.rs  internal.rs  lib.rs  macros.rs  mask.rs  number.rs  owned_bits.rs  set.rs  shift.rs  slice.rs
src/bits/: join_ones.rs
src/mask/: all.rs  none.rs
