[package]
name = "bittle"
version = "0.3.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65.0"
description = "A library for working with small and cheap bit sets and masks"
documentation = "https://docs.rs/bittle"
readme = "README.md"
homepage = "https://github.com/udoprog/bittle"
repository = "https://github.com/udoprog/bittle"
license = "MIT/Apache-2.0"
keywords = ["Bits", "bitvec", "container", "data-structure", "no_std"]
categories = ["data-structures"]
