[package]
name = "bittle"
version = "0.5.6"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "Zero-cost bitsets over native Rust types"
documentation = "https://docs.rs/bittle"
readme = "README.md"
homepage = "https://github.com/udoprog/bittle"
repository = "https://github.com/udoprog/bittle"
license = "MIT OR Apache-2.0"
keywords = ["bits", "bitvec", "container", "data-structure", "no_std"]
categories = ["data-structures"]
